--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
             </div>
         </div>
     </nav>
+    <section id="profile">
+        <div class="section_pic-container">
+            <img src="./assets/profile-pic.png" alt="Picture of An Yujin"/>
+        </div>
+        <div class="section_text">
+            <p class="section_text_p1">Hello, I'm</p>
+            <h1 class="title">Bernardo</h1>
+            <p class="section_text_p2">CS Student @ Rutgers University</p>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
